--- a/#src/scss/bem-blocks/socials.scss
+++ b/#src/scss/bem-blocks/socials.scss
@@ -4,33 +4,45 @@
   grid-auto-flow: column;
   justify-content: start;
   gap: 10px;
-  // .socials__item
-  &__item {
+  /* Добавлять мод-р, если будут ссылки с иконками */
+  &--has-icon {
+    .socials__link::after {
+      content: '';
+      display: inline-block;
+      width: 40px;
+      height: 40px;
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+  }
+  &--dark {
+    .socials__link {
+      color: $text-dark;
+    }
   }
   // .socials__link
   &__link {
-    display: flex;
-    align-items: center;
+    // display: flex;
+    // align-items: center;
     color: $white;
+    white-space: nowrap;
     &:hover {
       color: $orange;
     }
-  }
-  // .socials__icon
-  &__icon {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    background-repeat: no-repeat;
-    background-size: contain;
     &--viber {
-      background-image: url(../img/icons/viber.svg);
+      &::after {
+        background-image: url(../img/icons/viber.svg);
+      }
     }
     &--whatsapp {
-      background-image: url(../img/icons/whatsapp.svg);
+      &::after {
+        background-image: url(../img/icons/whatsapp.svg);
+      }
     }
     &--telegram {
-      background-image: url(../img/icons/telegram.svg);
+      &::after {
+        background-image: url(../img/icons/telegram.svg);
+      }
     }
   }
 }
