--- a/#src/scss/null.scss
+++ b/#src/scss/null.scss
@@ -10,14 +10,6 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-:focus,
-:active {
-  // outline: none;
-}
-a:focus,
-a:active {
-  // outline: none;
-}
 aside,
 nav,
 footer,
@@ -69,6 +61,8 @@ ul li {
   list-style: none;
 }
 img {
+  max-width: 100%;
+  height: auto;
   vertical-align: top;
 }
 h1,
