--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -84,7 +84,7 @@ main {
 @import 'bem-blocks/page-nav';
 @import 'bem-blocks/nav-bar';
 @import 'bem-blocks/search';
-@import 'bem-blocks/contacts';
+@import 'bem-blocks/contacts-info';
 @import 'bem-blocks/socials';
 @import 'bem-blocks/product-card';
 @import 'bem-blocks/form';
