add new color var

--- a/#src/scss/vars.scss
+++ b/#src/scss/vars.scss
@@ -4,6 +4,7 @@ $white: #ffffff;
 $grey: #636b78;
 $grey-light: #d0d0d0;
 $text-white: #faf6f2;
+$text-dark: #3e424b;
 //decorate-colors
 $bg-black: #050402;
 $orange: #bb8c5f;
