--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -60,7 +60,7 @@
     @media (min-width: $md2) {
       grid-area: contacts;
     }
-    .contacts__item {
+    .contacts-info__item {
       margin-bottom: 20px;
       &:last-child {
         margin-bottom: 0;
