--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -5,6 +5,12 @@
   @media (min-width: $md2) {
     height: 160px;
   }
+  &--js-fixed {
+    position: fixed;
+    z-index: 998;
+    top: 0;
+    width: 100%;
+  }
   // .header__inner
   &__inner {
     display: flex;
@@ -102,6 +108,7 @@
     }
   }
 
+  // .header__catalog
   &__catalog {
     z-index: 98;
     position: absolute;
@@ -117,6 +124,30 @@
     @media (min-width: $md5) {
       grid-area: search;
       display: block;
+    }
+    &--show {
+      z-index: 999;
+      display: block;
+      position: fixed;
+      top: 0;
+      background-color: $bg-black;
+      left: 0;
+      right: 0;
+      padding: 20px;
+      height: 80px;
+      &::before {
+        content: '';
+        position: absolute;
+        top: 100%;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        height: 100vh;
+        background-color: rgba(65, 65, 65, 0.274);
+      }
+      @media (min-width: $md5) {
+        all: unset;
+      }
     }
   }
   // .header__search-trigger
@@ -173,8 +204,26 @@
         }
       }
     }
+    &.open .dropdown-button-text--open {
+      display: none;
+      visibility: hidden;
+    }
+    &.open .dropdown-button-text--close {
+      display: inline;
+      visibility: visible;
+    }
+  }
+  // .dropdown-button-text
+  .dropdown-button-text {
+    &--open {
+    }
+    &--close {
+      display: none;
+      visibility: hidden;
+    }
   }
 
+  /* Mobile dropdown-menu */
   // .header__dropdown-menu
   &__dropdown-menu {
     display: none;
@@ -184,14 +233,13 @@
     top: 80px;
     right: 0;
     bottom: 0;
+    height: 100%;
     &.open {
       display: block;
-    }
-    & .search {
-      display: block;
-      padding-bottom: 40px;
-      margin-bottom: 40px;
-      border-bottom: 1px solid $orange-dark;
+      @media (min-width: $md2) {
+        display: none;
+        visibility: hidden;
+      }
     }
     & .contacts-info__item {
       font-size: 20px;
@@ -228,16 +276,28 @@
   overflow-y: auto;
   // .dropdown-menu__inner
   &__inner {
-    padding: 25px 20px;
+    padding-left: $pl;
+    padding-right: $pr;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
   // .dropdown-menu__nav
   &__nav {
+    margin-bottom: 25px;
   }
   // .dropdown-menu__search
   &__search {
+    display: block;
+    margin-bottom: 40px;
+    @media (min-width: $md5) {
+      display: none;
+      visibility: hidden;
+    }
   }
   // .dropdown-menu__contacts
   &__contacts {
+    padding-top: 40px;
+    border-top: 1px solid $orange-dark;
   }
 }
 
@@ -245,7 +305,7 @@
 .header-nav {
   // .header-nav__list
   &__list {
-    margin-bottom: 25px;
+    // margin-bottom: 25px;
   }
   // .header-nav__item
   &__item {
@@ -310,20 +370,23 @@
 
 //*catalog-dropdown
 .catalog-dropdown {
+  display: none;
   transform-origin: top;
   transform: rotateX(90deg);
   transition: transform 0.2s linear, opacity 0.3s linear;
-  // visibility: hidden;
-  opacity: 0;
   background-color: $white;
-  // overflow-y: auto;
+  @media (min-width: $md2) {
+    display: block;
+    opacity: 0;
+  }
   //todo мб перенести к элементу
   &.open {
     transform: rotate(0deg);
-    // visibility: visible;
-    opacity: 1;
+    @media (min-width: $md2) {
+      opacity: 1;
+    }
   }
-  // .catalog__content
+  // .catalog-dropdown__content
   &__content {
     &::before {
       content: '';
@@ -340,8 +403,8 @@
     // overflow-y: auto;
     padding: 30px 50px;
   }
-  // .catalog__show-model
-  &__show-model {
+  // .catalog-dropdown__tabs
+  &__tabs {
     position: relative;
     display: flex;
     flex-wrap: wrap;
@@ -357,30 +420,12 @@
       background-color: $grey-light;
     }
   }
-  // .catalog__button-group
-  &__button-group {
-    margin-right: 30px;
-    &:last-child {
-      margin-right: 0;
-    }
-  }
-  // .catalog__input
-  &__input {
-    display: none;
-    &:checked + label {
-      color: $orange;
-      &::before {
-        opacity: 1;
-      }
-    }
-  }
-  // .catalog__label
-  &__label {
+  // .catalog-dropdown__button-group
+  &__button {
     position: relative;
     display: block;
     font-size: 17px;
     color: $black;
-    //!странно выглядит font-weight: 600;
     line-height: 1.5;
     transition: color 0.2s linear;
     white-space: nowrap;
@@ -389,6 +434,7 @@
     padding-right: 5px;
     padding-bottom: 5px;
     cursor: pointer;
+    margin-right: 30px;
     &::before {
       content: '';
       position: absolute;
@@ -402,31 +448,42 @@
       opacity: 0;
       transition: opacity 0.2s linear;
     }
+    &:last-child {
+      margin-right: 0;
+    }
+    &.active {
+      color: $orange;
+      &::before {
+        opacity: 1;
+      }
+    }
   }
-  // .catalog__item
-  &__item {
-    // display: flex;
-    // flex-wrap: wrap;
 
-    display: grid;
+  // .catalog-dropdown__item
+  &__item {
+    display: none;
     // grid-template-columns: repeat(auto-fit, minmax(170px, max-content));
-    grid-template-columns: repeat(auto-fit, minmax(170px, max-content));
-    // grid-template-columns: repeat(5, minmax(170px, max-content));
-    // grid-template-columns: repeat(5, minmax(max-content, min-content));
+    grid-template-columns: repeat(4, 1fr);
     gap: 40px 40px;
     min-width: 620px;
+    @media (min-width: $maxWidthContainer) {
+      grid-template-columns: repeat(5, 1fr);
+    }
+    &.show {
+      display: grid;
+    }
   }
-  // .catalog__list
+  // .catalog-dropdown__list
   &__list {
   }
-  // .catalog__list-item
+  // .catalog-dropdown__list-item
   &__list-item {
     padding-top: 5px;
     padding-bottom: 5px;
     font-size: 17px;
     line-height: 1.5;
   }
-  // .catalog__link
+  // .catalog-dropdown__link
   &__link {
     color: $black;
     &:hover,
