--- a/#src/scss/mixins.scss
+++ b/#src/scss/mixins.scss
@@ -9,10 +9,12 @@
     font-style: #{$style};
   }
 }
+
+//todo спользую ли где? проверить
 //img
 @mixin image {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
 }
 
@@ -73,6 +75,7 @@
   background-position: center;
   background-size: cover;
 }
+//!need del
 @mixin gutters {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -82,6 +85,24 @@
   }
   @media (min-width: $md1) {
     padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@mixin gutters-top {
+  padding-top: 20px;
+  @media (min-width: $md2) {
+    padding-top: 40px;
+  }
+  @media (min-width: $md1) {
+    padding-top: 60px;
+  }
+}
+@mixin gutters-bottom {
+  padding-bottom: 20px;
+  @media (min-width: $md2) {
+    padding-bottom: 40px;
+  }
+  @media (min-width: $md1) {
     padding-bottom: 60px;
   }
 }
