--- a/#src/scss/bem-blocks/filter.scss
+++ b/#src/scss/bem-blocks/filter.scss
@@ -45,9 +45,9 @@
     &::before,
     &::after {
       position: absolute;
-      left: 15px;
-      content: ' ';
-      height: 33px;
+      top: 0;
+      content: '';
+      height: 100%;
       width: 2px;
       background-color: #333;
     }
@@ -73,9 +73,6 @@
         display: none;
       }
     }
-  }
-  // .group-filter__inner
-  &__inner {
   }
   // .group-filter__top
   &__top {
@@ -231,8 +228,5 @@
     display: inline-block;
     font-size: 17px;
     line-height: 1.5;
-  }
-  //.group-filter__input
-  &__input {
   }
 }
