--- a/#src/scss/bem-blocks/product-card.scss
+++ b/#src/scss/bem-blocks/product-card.scss
@@ -1,28 +1,7 @@
 .product-card {
-  min-height: 450px;
-  // z-index: 3;
   position: relative;
   background-color: $bg-card;
   @media (min-width: $md2) {
-    // &.hover {
-    //   .product-card__wrapper {
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     right: 0;
-    //   }
-    //   .product-card__bottom {
-    //     display: block;
-    //     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    //   }
-    //   .product-card__bottom-inner {
-    //     display: block;
-    //     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    //   }
-    //   .product-card__product-name {
-    //     max-height: 100%;
-    //   }
-    // }
     &:hover,
     &:focus,
     &:focus-within {
@@ -34,29 +13,37 @@
         right: 0;
       }
       .product-card__bottom {
-        display: block;
+        display: grid;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
       }
       .product-card__bottom-inner {
-        display: block;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
       }
       .product-card__product-name {
-        max-height: 100%;
+        height: 100%;
       }
     }
   }
   // .product-card__wrapepr
   &__wrapper {
+    display: grid;
+    height: 100%;
     position: relative;
     background-color: inherit;
+    @media (min-width: $md2) {
+      height: auto;
+    }
   }
   // .product-card__link
   &__link {
+    @supports (display: contents) {
+      display: contents;
+    }
     display: block;
     color: inherit;
     &::before {
       content: '';
+      z-index: -1;
       position: absolute;
       top: 0;
       left: 0;
@@ -66,17 +53,6 @@
     &:focus-visible {
       outline: 0;
     }
-    // &:focus,
-    // &:focus-visible {
-    //   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    //   &::before {
-    //     content: '';
-    //     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    //   }
-    // }
-    // &:hover {
-    //   outline: none;
-    // }
   }
   // .product-card__top
   &__top {
@@ -85,57 +61,77 @@
   }
   // .product-card__bottom
   &__bottom {
-    z-index: -1;
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    display: grid;
+    align-items: end;
     @media (min-width: $md2) {
       display: none;
+      z-index: -1;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
     }
   }
   // .product-card__bottom-inner
   &__bottom-inner {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 30px;
-    transform: translateY(100%);
+    display: block;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
     background-color: $bg-card;
-    // &::before {
-    //   content: '';
-    //   position: absolute;
-    //   left: 0;
-    //   top: -20px;
-    //   right: 0;
-    //   height: 20px;
-    //   background-color: $bg-card;
-    // }
+    @media (min-width: $md2) {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      transform: translateY(100%);
+    }
   }
   // .product-card__product-info
   &__product-info {
     //!не ставить, чтобы ссылка растянулась на весь блок position: relative;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 10px;
   }
-  // .product-card__gallery
-  &__gallery {
-    margin-bottom: 22px;
-    padding-top: 60px;
+  // .product-card__image
+  &__image {
+    position: relative;
+    display: block;
+    margin-bottom: 14px;
+    &::before {
+      content: '';
+      display: block;
+      width: 100%;
+      position: relative;
+      padding-top: 100%;
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      object-fit: contain;
+    }
+    @media (min-width: $md7) {
+      margin-bottom: 10px;
+    }
   }
   // .product-card__product-name
   &__product-name {
-    max-height: 50px;
-    overflow: hidden;
     font-size: 17px;
+    overflow: hidden;
     line-height: 1.4;
     margin-bottom: 10px;
+    @media (min-width: $md7) {
+      font-size: 15px;
+    }
+    @media (min-width: $md2) {
+      min-height: 50px;
+      height: 50px;
+      font-size: 17px;
+    }
   }
   // .product-card__price
   &__price {
@@ -144,6 +140,9 @@
     font-weight: 700;
     line-height: 1.3;
     color: $orange;
+    @media (min-width: $md7) {
+      font-size: 18px;
+    }
   }
   // .product-card__old-price
   &__old-price {
@@ -151,54 +150,52 @@
     line-height: 1.3;
     color: $grey;
     text-decoration: line-through;
+    @media (min-width: $md7) {
+      font-size: 16px;
+    }
   }
   // .product-card__button
   &__button {
     width: 100%;
+    padding: 0.6em 0.8em;
+    font-size: 17px;
+    line-height: 1;
     &:first-child {
       //чтобы не обрезался outline из-за позиционирования
       //еще лучше сделать враппер для кнопки
       margin-top: 2px;
     }
-    & + .counter-card {
-      display: none;
+    @media (min-width: $md7) {
+      font-size: 16px;
     }
-    &.active {
+    @media (min-width: $md2) {
+      font-size: 17px;
+    }
+    & .button__corner {
       display: none;
-      & + .counter-card {
-        display: flex;
-      }
     }
   }
   // .product-card__tips
   &__tips {
     z-index: 1;
     position: absolute;
-    display: inline-flex;
-    flex-direction: column;
+    display: grid;
+    row-gap: 6px;
     top: 0;
     left: 0;
-    padding: 15px 30px;
+    padding: 15px 10px;
   }
   // .product-card__tips-row
   &__tips-row {
-    margin-bottom: 6px;
-    &:last-child {
-      margin-bottom: 0;
-    }
     &:nth-child(n + 5) {
       display: none;
     }
-  }
-  // .product-card__tips-item
-  &__tips-item {
-    // max-width: 55%;
   }
   // .product-card__favorites
   &__favorites {
     position: absolute;
     top: 15px;
-    right: 30px;
+    right: 15px;
     width: 28px;
     height: 28px;
     background-image: url(../../img/icons/product-card/heart-empty.svg);
@@ -227,126 +224,35 @@
     }
   }
 }
-
-.gallery-card {
-  // .gallery-card__slider
-  &__slider {
-  }
-  // .gallery-card__slide
-  &__slide {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    user-select: none;
-    img {
-      object-fit: cover;
-      object-position: center;
-      //Для alt
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      // line-height: 100px;
-      font-size: 18px;
-    }
-    .swiper-lazy {
-      opacity: 0;
-    }
-    .swiper-lazy-loaded {
-      opacity: 1;
-    }
-  }
-  // .gallery-card__pagination
-  &__pagination {
-    display: flex;
-    justify-content: center;
-    column-gap: 8px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    .swiper-pagination-bullet {
-      display: block;
-      width: 6px;
-      height: 6px;
-      cursor: pointer;
-      background-color: $grey-light;
-      &-active {
-        background-color: $orange-dark;
-      }
-    }
-  }
-}
 .tip {
-  position: relative;
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  height: 28px;
   overflow: hidden;
-  padding: 5px 25px 5px 10px;
-  background-color: transparent;
+  padding: 3px 6px;
+  background-color: $bg-card;
   user-select: none;
-  border-right-color: transparent;
-  border-style: solid;
-  border-width: 1px;
-  border-right-width: 0;
-  &::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    right: -19px;
-    display: block;
-    width: 28px;
-    height: 28px;
-    transform: translateY(-50%) rotate(45deg);
-    border: 1px solid transparent;
-    background-color: inherit;
-  }
+  font-size: 14px;
+  line-height: 1.2;
+  border: 1px solid transparent;
   &--new {
     color: $orange;
-    border-top-color: $orange;
-    border-bottom-color: $orange;
-    border-left-color: $orange;
-    &::before {
-      border: 1px solid $orange;
-    }
+    border: 1px solid $orange;
   }
   &--hit {
     color: #755fbb;
-    border-top-color: #755fbb;
-    border-bottom-color: #755fbb;
-    border-left-color: #755fbb;
-    &::before {
-      border: 1px solid #755fbb;
-    }
+    border: 1px solid #755fbb;
   }
   &--action {
     color: #5fbba3;
-    border-top-color: #5fbba3;
-    border-bottom-color: #5fbba3;
-    border-left-color: #5fbba3;
-    &::before {
-      border: 1px solid #5fbba3;
-    }
+    border: 1px solid #5fbba3;
   }
   &--out {
     color: #636b78;
-    border-top-color: #636b78;
-    border-bottom-color: #636b78;
-    border-left-color: #636b78;
-    &::before {
-      border: 1px solid #636b78;
-    }
+    border: 1px solid #636b78;
   }
   &--sale {
     color: #c82a2a;
-    border-top-color: #c82a2a;
-    border-bottom-color: #c82a2a;
-    border-left-color: #c82a2a;
-    &::before {
-      border: 1px solid #c82a2a;
-    }
-  }
-  &__text {
-    font-size: 15px;
-    line-height: 1.3;
+    border: 1px solid #c82a2a;
   }
 }
