--- a/#src/scss/product.scss
+++ b/#src/scss/product.scss
@@ -1,14 +1,14 @@
+.product-page {
+  padding-bottom: 60px;
+  // .product-page__item
+  &__item {
+    &:not(:last-child) {
+      margin-bottom: 60px;
+    }
+  }
+}
+
 .product {
-  // .product__inner
-  &__inner {
-    @include padding-container($maxWidthContainer, $pl, $pr);
-    @include gutters;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  // .product__breadcrumbs
-  &__breadcrumbs {
-  }
   // .product__heading
   &__heading {
     width: 100%;
@@ -26,15 +26,22 @@
   // .product__card
   &__card {
     width: 100%;
-    margin-bottom: 30px;
-    // margin-bottom: 50px;
+    margin-bottom: 40px;
+    @media (min-width: $md4) {
+      margin-bottom: 40px;
+    }
+    @media (min-width: $md2) {
+      margin-bottom: 48px;
+    }
   }
   // .product__card-inner
   &__card-inner {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -10px;
-    margin-right: -10px;
+    @media (min-width: $md5) {
+      margin-left: -10px;
+      margin-right: -10px;
+    }
     @media (min-width: $md4) {
       margin-left: -15px;
       margin-right: -15px;
@@ -42,29 +49,6 @@
     @media (min-width: $md2) {
       margin-left: -20px;
       margin-right: -20px;
-    }
-    // margin: -25px -20px;
-  }
-  // .product__details
-  &__details {
-    .details-product__item {
-      margin-bottom: 20px;
-    }
-    @media (min-width: $md4) {
-      display: flex;
-      flex-wrap: wrap;
-      margin: 0 -10px;
-      .details-product__item {
-        width: 50%;
-        padding: 0 10px;
-      }
-    }
-    @media (min-width: $md2) {
-      margin: 0 -20px;
-      .details-product__item {
-        width: 50%;
-        padding: 0 20px;
-      }
     }
   }
   // .product__gallery
@@ -93,83 +77,6 @@
       padding-right: 20px;
     }
   }
-  // .product__thumbs-slider
-  &__thumbs-slider {
-    width: 100%;
-    @media (min-width: $md4) {
-      order: -1;
-      flex-shrink: 0;
-      width: 83px;
-      margin-right: 10px;
-    }
-  }
-  // .product__thumbs-slider-inner
-  &__thumbs-slider-inner {
-    @media (min-width: $md4) {
-      height: 400px;
-    }
-  }
-  // .product__thumbs-slide
-  &__thumbs-slide {
-    background-color: $bg-card;
-    &.swiper-slide {
-      height: auto;
-      width: 83px;
-      @media (min-width: $md4) {
-        height: 83px;
-      }
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-      object-fit: cover;
-      border: 1px solid transparent;
-      /* Для alt */
-      //!нужна фиксированная высота блока чтобы можно было центрировать
-      // display: grid;
-      // place-items: center;
-      // font-size: 10px;
-    }
-    &.swiper-slide-thumb-active {
-      & img {
-        border: 1px solid $orange;
-      }
-      /* Почему-то не работает в хрома на телефоне */
-      // box-shadow: inset 0 0 0 1px $red;
-    }
-    .swiper-lazy {
-      opacity: 0;
-    }
-    .swiper-lazy-loaded {
-      opacity: 1;
-    }
-  }
-  // .product__slider
-  &__slider {
-    // width: 100%;
-    margin-bottom: 10px;
-    @media (min-width: $md4) {
-      // width: unset;
-      margin-bottom: 0;
-    }
-    .swiper-lazy {
-      opacity: 0;
-    }
-    .swiper-lazy-loaded {
-      opacity: 1;
-    }
-  }
-  // .product__slide
-  &__slide {
-    display: flex;
-    align-items: center;
-    background-color: #f6f6f6;
-    img {
-      max-width: 100%;
-      height: auto;
-      object-fit: cover;
-    }
-  }
   // .product__info
   &__info {
     width: 100%;
@@ -191,8 +98,103 @@
       padding-right: 20px;
     }
   }
-  // .product__actions
-  &__actions {
+  // .product__details
+  &__details {
+    @media (min-width: $md4) {
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0 -10px;
+    }
+    @media (min-width: $md2) {
+      margin: 0 -20px;
+    }
+  }
+  // .product__thumbs-slider
+  &__thumbs-slider {
+    max-height: 427px;
+    width: 100%;
+    @media (min-width: $md6) {
+      order: -1;
+      flex-shrink: 0;
+      width: var(--thumbs-width, 83px);
+      margin-right: var(--thumbs-gutter, 10px);
+    }
+    @media (min-width: $md5) {
+      order: 0;
+      width: 100%;
+      margin-right: 0;
+    }
+    @media (min-width: $md4) {
+      order: -1;
+      width: var(--thumbs-width, 83px);
+      margin-right: var(--thumbs-gutter, 10px);
+    }
+  }
+  // .product__thumbs-slider-inner
+  &__thumbs-slider-inner {
+    height: 100%;
+  }
+  // .product__thumbs-slide
+  &__thumbs-slide {
+    background-color: $bg-card;
+    &.swiper-slide {
+      height: auto;
+      width: 83px;
+      @media (min-width: $md4) {
+        height: 83px;
+      }
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      object-fit: cover;
+      border: 1px solid transparent;
+    }
+    &.swiper-slide-thumb-active {
+      & img {
+        border: 1px solid $orange;
+      }
+    }
+    .swiper-lazy {
+      opacity: 0;
+    }
+    .swiper-lazy-loaded {
+      opacity: 1;
+    }
+  }
+  // .product__slider
+  &__slider {
+    margin-bottom: var(--thumbs-gutter, 10px);
+    @media (min-width: $md6) {
+      width: calc(100% - var(--thumbs-width, 83px) - var(--thumbs-gutter, 10px));
+      margin-bottom: 0;
+    }
+    @media (min-width: $md5) {
+      width: 100%;
+      margin-bottom: var(--thumbs-gutter, 10px);
+    }
+    @media (min-width: $md4) {
+      width: calc(100% - var(--thumbs-width, 83px) - var(--thumbs-gutter, 10px));
+      margin-bottom: 0;
+    }
+    .swiper-lazy {
+      opacity: 0;
+    }
+    .swiper-lazy-loaded {
+      opacity: 1;
+    }
+  }
+  // .product__slide
+  &__slide {
+    max-height: 427px;
+    display: flex;
+    align-items: center;
+    background-color: #f6f6f6;
+    img {
+      max-width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
   }
   // .product__price
   &__price {
@@ -237,7 +239,7 @@
   }
   // .product__desc
   &__desc {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     font-size: 17px;
     line-height: 1.4;
     span {
@@ -247,6 +249,12 @@
     }
     p {
       margin: 8px 0;
+    }
+    @media (min-width: $md4) {
+      margin-bottom: 24px;
+    }
+    @media (min-width: $md2) {
+      margin-bottom: 40px;
     }
   }
   // .product__button-wrapper
@@ -308,6 +316,20 @@
 }
 
 .details-product {
+  //.details-product__item
+  &__item {
+    margin-bottom: 30px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    @media (min-width: $md4) {
+      width: 50%;
+      padding: 0 10px;
+    }
+    @media (min-width: $md2) {
+      padding: 0 20px;
+    }
+  }
   // .details-product__heading
   &__heading {
     font-family: $jost;
@@ -363,62 +385,26 @@
     }
   }
 }
-//========================================================================================================================================================
+
 .related-products {
-  // .related-products__inner
-  &__inner {
-    @include padding-container($maxWidthContainer, $pl, $pr);
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
   // .related-products__item
   &__item {
     &:not(:last-child) {
       margin-bottom: 60px;
-      @media (min-width: $md4) {
-        margin-bottom: 80px;
-      }
       @media (min-width: $md2) {
-        margin-bottom: 70px;
+        margin-bottom: 0;
       }
-    }
-  }
-  // .related-products__heading-wrapper
-  &__heading-wrapper {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 30px;
-    @media (min-width: $md4) {
-      margin-bottom: 40px;
-    }
-    @media (min-width: $md1) {
-      margin-bottom: 45px;
-    }
-  }
-  // .related-products__heading
-  &__heading {
-    font-family: $forum;
-    font-size: 25px;
-    @media (min-width: $md4) {
-      font-size: 50px;
-    }
-    @media (min-width: $md1) {
-      font-size: 60px;
-    }
-  }
-  // .related-products__see-all
-  &__see-all {
-    font-size: 15px;
-    line-height: 1.4;
-    color: $black;
-    align-self: flex-end;
-    @media (min-width: $md4) {
-      font-size: 25px;
     }
   }
   // .related-products__slider
   &__slider {
     position: relative;
+    .swiper-wrapper {
+      //? Grid для того, чтобы разные по высоте карточки товаров были одной высоты,
+      //? Flex не справляется с этим, или я что-то не знаю
+      display: grid;
+      grid-auto-flow: column;
+    }
     .swiper-slide {
       width: 240px;
       @media (min-width: $md7) {
@@ -431,11 +417,6 @@
       justify-content: center;
       align-items: center;
       margin-top: 30px;
-      // z-index: -1;
-      // position: absolute;
-      // left: 50%;
-      // bottom: 0;
-      // transform: translateX(-50%);
       @media (min-width: $md4) {
         margin-top: 45px;
       }
@@ -470,7 +451,9 @@
   // .related-products__slider-inner
   &__slider-inner {
     &.swiper {
-      padding-bottom: 80px;
+      @media (min-width: $md2) {
+        padding-bottom: 80px;
+      }
     }
   }
 }
