--- a/#src/scss/catalog.scss
+++ b/#src/scss/catalog.scss
@@ -1,32 +1,13 @@
 .catalog {
   // .catalog__products
   &__inner {
-    @include padding-container($maxWidthContainer, $pl, $pr);
-    @include gutters;
+    @include gutters-bottom;
     display: flex;
     flex-wrap: wrap;
-  }
-  // .catalog__breadcrumbs
-  &__breadcrumbs {
   }
   // .catalog__heading
   &__heading {
     width: 100%;
-    font-family: $forum;
-    line-height: 1;
-    font-size: 32px;
-    margin-bottom: 20px;
-    @media (min-width: $md5) {
-      font-size: 36px;
-    }
-    @media (min-width: $md4) {
-      font-size: 50px;
-      margin-bottom: 30px;
-    }
-    @media (min-width: $md2) {
-      font-size: 60px;
-      margin-bottom: 40px;
-    }
   }
   // .catalog__filter
   &__filter {
@@ -43,8 +24,8 @@
       display: flex;
     }
     @media (min-width: 1280px) {
+      z-index: 0;
       position: initial;
-      position: sticky;
       display: block;
       width: calc(100% / 4);
       padding-right: 20px;
@@ -120,12 +101,22 @@
   &__products-container {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 20px;
+    row-gap: 20px;
     margin-bottom: 50px;
-    @media (min-width: $md6) {
-      grid-template-columns: 1fr 1fr;
+    @media (min-width: $md7) {
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 10px;
     }
-    @media (min-width: $md2) {
+    @media (min-width: $md5) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @media (min-width: $md4) {
+      column-gap: 20px;
+    }
+    @media (min-width: $md3) {
+      grid-template-columns: repeat(4, 1fr);
+    }
+    @media (min-width: 1280px) {
       grid-template-columns: repeat(3, 1fr);
     }
   }
@@ -142,6 +133,7 @@
   }
   // .catalog__button
   &__button {
+    display: block;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 50px;
